# hhalvors.github.io

./: .gitignore  .gitmodules  BibTeXParser.hs  Courses.hs  DanishTexts.hs  FormulaParser.hs  GenerateBibHtml.hs  GenerateHtml.hs  ParseBibTeX.hs  README.md  Talks.hs  TalksMaster.hs  _config.yml  bib2html.hs  cats.html  courses.html  coursesToHtml.hs  cv.tex  dualism.html  hans-halvorson.cabal  hh.bib  hlw.html  index.html  index.md  math.html  publications.html  quantum.html  site.hs  stack.yaml  talks-tool.hs  talks.html  talks.md  teaching.yaml
_bibliography/: hh.bib
_layouts/: default.html
_pages/: about.md  cv.md
bib/: bibliography.bib  equiv-theories.bib
books/: hlw-key-terms.tex
courses/phi201_f2025/: precept-workbook.tex
courses/phi220_f2026/: course.yaml
courses/phi221_f2026/: course.yaml
courses/phi321_s2015/: index.md
css/: style.css
data/: courses.json  talks-master.yaml
docs/: 404.html  CNAME  alumni2026.html  atom.xml  bohr.html  courses.html  debug.html  drafts.html  index.html  john.html  phi201_s2021.html  publications.html  talks-cv-improvements.md  talks.html  truth.html
docs/bohr/: action.html  beables.html  bell.html  biology.html  bks.html  bohr1960unity.html  bohr1960unity.html~  brandes.html  brochner.html  causality-quotes.html  causality.html  christiansen.html  chronology.html  classical.html  entydighed.html  epistemology.html  epr.html  exner.html  experiments.html  favrholdt.html  fichte.html  filosofikum.html  free-will.html  hanna-adler.html  heisenberg.html  helmholtz.html  hoffding-darwin.html  hoffding.html  holberg.html  høffding.html  index.html  julius.html  kant.html  kierkegaard.html  language.html  martensen.html  math.html  mechanical.html  moller.html  nielsen.html  (+26 more)
docs/books/: hlw-errata.html  index.html  money.html
docs/brochner/problemet-tro-viden/: forord-da.html  forord-en.html  transcription.tex  translation.tex
docs/courses/: index.html  kierkegaard.html
docs/courses/logic-exams/: index.html
docs/courses/phi201_f2025/: advice.html  fep-solutions.tex  final-exam-alt.tex  final-exam-practice.tex  final-exam.tex  grade-sheet.tex  index-old.html  index.html  lecture-week12.tex  lecture-week3.tex  lecture-week6.tex  lecture-week7.tex  lecture-week8.tex  lecture-week9.tex  lecture12.tex  lecture13.tex  lecture3.tex  lecture4.tex  (+36 more)
docs/css/: course.css  lanyon.css  poole.css  style-old.css  style.css
docs/danish-texts/: index.html
docs/dansk/: index.html
docs/data/: kierkegaard-locations.json
docs/kierkegaard/: index.html  postscript.html
docs/logic/: addenda.html  code.html  index.html  solns2.html  solns3.html  solns5.html  solns6.html  solutions.html  test.html
docs/pages/: About.html  brochner.html  danish-texts-notes.html  danish-texts.html  phi201_s2021.html
docs/phi201/: index.html
docs/spacetime/: fragmentalism.html  frames.html  hard.html  index.html
docs/talks/: b4bohr-trash.tex  b4bohr.aux  b4bohr.bbl  b4bohr.bcf  b4bohr.blg  b4bohr.nav  b4bohr.out  b4bohr.run.xml  b4bohr.tex  b4bohr.toc  b4bohr.vrb  bohr-causality.aux  bohr-causality.bbl  bohr-causality.bcf  bohr-causality.blg  bohr-causality.nav  bohr-causality.out  bohr-causality.run.xml  bohr-causality.tex  bohr-causality.toc  bohr-livsanskuelse.pptx  bohr-roots-beamer.tex  climacus.aux  climacus.nav  climacus.out  climacus.tex  climacus.toc  det.bib  equivalence-foundations.aux  equivalence-foundations.bbl  equivalence-foundations.bcf  equivalence-foundations.blg  equivalence-foundations.nav  equivalence-foundations.run.xml  equivalence-foundations.tex  equivalence.tex  hole-dispense.tex  illinois2019.tex  irvine2023.md  konstanz.tex  (+32 more)
docs/theories/: index.html
pages/: danish-texts.md  index.md
src/filters/: PubList.hs  lemmonFilter.hs
talks/: b4bohr.tex  climacus.tex  irvine2023.tex  reduction.tex  shifty.tex  spacing.tex  windbag.pptx
teaching/: index.html  index.md
templates/: course-year.html  courses.html  courses.html~  default.html  default.html~  head.html  head.html~  logic-exam-list.html  logic-exam-list.html~  logic-exams-list.html  logic-exams-list.html~  page.html  sidebar.html  sidebar.html~
(+166 files in other folders)
