name:               hans-halvorson
version:            0.1.0.0
homepage:           https://hanshalvorson.com
license:            MIT
author:             Hans Halvorson
maintainer:         hhalvors@princeton.edu
copyright:          2025 Hans Halvorson
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    BibTeXParser, LemmonFilter, FormulaParser, PubList, EquivBiblio, DanishTexts, Syllabus, Talks, TalksMaster, CoursePages.Course
  build-depends:    base == 4.*
                  , hakyll == 4.16.*  
                  , containers == 0.6.*
                  , filepath == 1.4.*
                  , bibtex
                  , parsec
                  , directory
                  , blaze-html
                  , pandoc-types
                  , pandoc >= 2.14 && < 3.0 
                  , text >= 1.2.4
                  , pandoc-sidenote >=1.0
                  , aeson >=2.1
                  , bytestring >=0.11
                  , process
                  , regex-tdfa
                  , yaml >= 0.11 && < 0.12
                  , data-default
  hs-source-dirs:   ., src, src/filters
  ghc-options:      -threaded
  default-language: Haskell2010

executable talks
  main-is:          talks-tool.hs
  other-modules:    TalksMaster
  build-depends:    base == 4.*
                  , aeson >=2.1
                  , yaml >= 0.11 && < 0.12
                  , text >= 1.2.4
                  , containers == 0.6.*
                  , directory
                  , filepath
  hs-source-dirs:   .
  default-language: Haskell2010
